force-app/main/default/objects/KYC_Status__c/fields/X1st_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X1st_Client_follow_up__c</fullName>
    <description>Date that the KYC Contact have been contacted</description>
    <inlineHelpText>1st Follow up with the Client</inlineHelpText>
    <label>1st Client follow up</label>
    <type>Date</type>
</CustomField>