force-app/main/default/objects/KYC_Status__c/fields/X2nd_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Client_follow_up__c</fullName>
    <description>Date that the KYC Contact have been contacted</description>
    <inlineHelpText>2nd Follow up with the Client</inlineHelpText>
    <label>2nd Client follow up</label>
    <type>Date</type>
</CustomField>