force-app/main/default/objects/KYC_Status__c/fields/X3rd_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Client_follow_up__c</fullName>
    <description>Date that the KYC Contact have been contacted</description>
    <inlineHelpText>3rd Follow up with the Client</inlineHelpText>
    <label>3rd Client follow up</label>
    <type>Date</type>
</CustomField>