force-app/main/default/objects/KYC_Status__c/fields/X4th_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X4th_Client_follow_up__c</fullName>
    <description>4th Follow up with the Client</description>
    <inlineHelpText>4th Follow up with the Client</inlineHelpText>
    <label>4th Client follow up</label>
    <type>Date</type>
</CustomField>