force-app/main/default/objects/KYC_Status__c/fields/X5th_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X5th_Client_follow_up__c</fullName>
    <description>5th Follow up with the Client</description>
    <inlineHelpText>5th Follow up with the Client</inlineHelpText>
    <label>5th Client follow up</label>
    <type>Date</type>
</CustomField>