force-app/main/default/objects/KYC_Status__c/fields/X6th_Client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X6th_Client_follow_up__c</fullName>
    <description>6th Follow up with the Client</description>
    <inlineHelpText>6th Follow up with the Client</inlineHelpText>
    <label>6th Client follow up</label>
    <type>Date</type>
</CustomField>