force-app/main/default/objects/KYC_Status__c/validationRules/Closure_Suspended_reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closure_Suspended_reason_Required</fullName>
    <active>true</active>
    <description>If the KYC Review Status is Closed or Suspended then the Closure/Suspended Reason is required</description>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL( KYC_Review_Status__c , &apos;Closed&apos;),
		ISPICKVAL( KYC_Review_Status__c , &apos;Suspended&apos;)		
	),
	ISPICKVAL(Closure_Suspended_Reason__c, &apos;&apos;),
	NOT($Setup.Environment_Variable__c.Ignore_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Please select a Closure/Suspended reason</errorMessage>
</ValidationRule>