force-app/main/default/objects/KYC_Status__c/validationRules/Escalation_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_Date_Mandatory</fullName>
    <active>true</active>
    <description>Escalated date mandatory on selecting Escalated to Business User</description>
    <errorConditionFormula>AND(NOT(ISBLANK( Escalated_to_Business__c ) ),ISBLANK( Escalation_Date__c ),NOT( $Setup.Environment_Variable__c.Ignore_Validation_Rule__c ))</errorConditionFormula>
    <errorDisplayField>Escalation_Date__c</errorDisplayField>
    <errorMessage>Please provide Escalation Date</errorMessage>
</ValidationRule>