force-app/main/default/objects/KYC_Status__c/validationRules/Prevent_change_of_Entity_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_of_Entity_code</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Entity_Code__c)</errorConditionFormula>
    <errorDisplayField>Entity_Code__c</errorDisplayField>
    <errorMessage>You cannot change the entity of an existing KYC record. Please start a new KYC.</errorMessage>
</ValidationRule>