force-app/main/default/objects/KYC_Status__c/validationRules/Validate_3rd_Follow_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_3rd_Follow_Date</fullName>
    <active>true</active>
    <description>Validates 3rd Follow up Date to be filled after 2nd follow up is filled and to be greater than 2nd follow up date</description>
    <errorConditionFormula>OR(ISNULL( X2nd_Client_follow_up__c ) &amp;&amp; NOT(ISNULL(  X3rd_Client_follow_up__c )), X2nd_Client_follow_up__c &gt; X3rd_Client_follow_up__c ) &amp;&amp; NOT( $Setup.Environment_Variable__c.Ignore_Validation_Rule__c )</errorConditionFormula>
    <errorMessage>2nd Client Follow Up Date must be completed before the 3rd Client Follow Up Date and the 3rd Client Follow Up Date must be later than the 2nd Client Follow Up Date</errorMessage>
</ValidationRule>