force-app/main/default/objects/KYC_Status__c/validationRules/Validate_4th_Follow_up_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_4th_Follow_up_Date</fullName>
    <active>true</active>
    <description>Before filling 4th Follow up date, 3rd follow up date should be completed</description>
    <errorConditionFormula>(ISNULL( X3rd_Client_follow_up__c ) &amp;&amp; NOT(ISNULL( X4th_Client_follow_up__c ))) || X3rd_Client_follow_up__c &gt; X4th_Client_follow_up__c</errorConditionFormula>
    <errorMessage>3rd Client follow up date must be completed before the 4th Client follow up date and 4th Client follow up date must be later than the 3rd Client follow up date</errorMessage>
</ValidationRule>