force-app/main/default/objects/KYC_Status__c/validationRules/Validate_6th_Follow_up_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_6th_Follow_up_Date</fullName>
    <active>true</active>
    <description>Before filling 6th Follow up date, 5th follow up date should be completed</description>
    <errorConditionFormula>(ISNULL(X5th_Client_follow_up__c) &amp;&amp; NOT(ISNULL(X6th_Client_follow_up__c))) || X5th_Client_follow_up__c &gt; X6th_Client_follow_up__c</errorConditionFormula>
    <errorMessage>5th Client follow up date must be completed before the 6th Client follow up date and 6th Client follow up date must be later than the 5th Client follow up date</errorMessage>
</ValidationRule>