force-app/main/default/objects/KYC_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Client__c</columns>
    <columns>Entity_Code__c</columns>
    <columns>KYC_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Entity_Name__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>