force-app/main/default/objects/KYC_Status__c/listViews/KYC_Reviews_Consultants.listView-meta.xml
<ListView>
    <fullName>KYC_Reviews_Consultants</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>KYC_Review_Status__c</columns>
    <columns>CC_Contacted_Date__c</columns>
    <columns>Client_Contact_Date__c</columns>
    <columns>X1st_Client_follow_up__c</columns>
    <columns>X2nd_Client_follow_up__c</columns>
    <columns>X3rd_Client_follow_up__c</columns>
    <columns>Escalation_Date__c</columns>
    <columns>Escalated_to_Business__c</columns>
    <filterScope>Everything</filterScope>
    <label>KYC Reviews (Consultants)</label>
</ListView>